<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_course"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_documents"
        android:icon="@drawable/ic_document"
        android:title="@string/nav_documents" />
    <item
        android:id="@+id/navigation_flashcards"
        android:icon="@drawable/ic_flashcard"
        android:title="@string/nav_flashcards" />
    <item
        android:id="@+id/navigation_ai"
        android:icon="@drawable/ic_ai"
        android:title="@string/nav_ai" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>

